--- a/views/about.html
+++ b/views/about.html
@@ -108,5 +108,214 @@
                 </div>
             </div>
         </div>
+        <div class="about-photo-item-container">
+            <div class="about-photo-item-header">
+                <div class="about-photo-item-name">
+                    Sweet Dreams!
+                </div>
+                <div class="about-photo-item-place">
+                    17 Августа, 2015
+                </div>
+            </div>
+            <div class="about-photo-item">
+                <img src="4.jpg">
+            </div>
+            <div class="about-photo-item-actions">
+                <div class="about-photo-item-like">
+                    <img src="unliked.svg">
+                </div>
+                <div class="about-photo-item-action-text">
+                    Like 1000
+                </div>
+                <div class="about-photo-item-comment">
+                    <img src="comment.svg">
+                </div>
+                <div class="about-photo-item-action-text">
+                    Comment 4
+                </div>
+            </div>
+        </div><div class="about-photo-item-container">
+        <div class="about-photo-item-header">
+            <div class="about-photo-item-name">
+                Sweet Dreams!
+            </div>
+            <div class="about-photo-item-place">
+                17 Августа, 2015
+            </div>
+        </div>
+        <div class="about-photo-item">
+            <img src="4.jpg">
+        </div>
+        <div class="about-photo-item-actions">
+            <div class="about-photo-item-like">
+                <img src="unliked.svg">
+            </div>
+            <div class="about-photo-item-action-text">
+                Like 1000
+            </div>
+            <div class="about-photo-item-comment">
+                <img src="comment.svg">
+            </div>
+            <div class="about-photo-item-action-text">
+                Comment 4
+            </div>
+        </div>
+    </div><div class="about-photo-item-container">
+        <div class="about-photo-item-header">
+            <div class="about-photo-item-name">
+                Sweet Dreams!
+            </div>
+            <div class="about-photo-item-place">
+                17 Августа, 2015
+            </div>
+        </div>
+        <div class="about-photo-item">
+            <img src="4.jpg">
+        </div>
+        <div class="about-photo-item-actions">
+            <div class="about-photo-item-like">
+                <img src="unliked.svg">
+            </div>
+            <div class="about-photo-item-action-text">
+                Like 1000
+            </div>
+            <div class="about-photo-item-comment">
+                <img src="comment.svg">
+            </div>
+            <div class="about-photo-item-action-text">
+                Comment 4
+            </div>
+        </div>
+    </div><div class="about-photo-item-container">
+        <div class="about-photo-item-header">
+            <div class="about-photo-item-name">
+                Sweet Dreams!
+            </div>
+            <div class="about-photo-item-place">
+                17 Августа, 2015
+            </div>
+        </div>
+        <div class="about-photo-item">
+            <img src="4.jpg">
+        </div>
+        <div class="about-photo-item-actions">
+            <div class="about-photo-item-like">
+                <img src="unliked.svg">
+            </div>
+            <div class="about-photo-item-action-text">
+                Like 1000
+            </div>
+            <div class="about-photo-item-comment">
+                <img src="comment.svg">
+            </div>
+            <div class="about-photo-item-action-text">
+                Comment 4
+            </div>
+        </div>
+    </div><div class="about-photo-item-container">
+        <div class="about-photo-item-header">
+            <div class="about-photo-item-name">
+                Sweet Dreams!
+            </div>
+            <div class="about-photo-item-place">
+                17 Августа, 2015
+            </div>
+        </div>
+        <div class="about-photo-item">
+            <img src="4.jpg">
+        </div>
+        <div class="about-photo-item-actions">
+            <div class="about-photo-item-like">
+                <img src="unliked.svg">
+            </div>
+            <div class="about-photo-item-action-text">
+                Like 1000
+            </div>
+            <div class="about-photo-item-comment">
+                <img src="comment.svg">
+            </div>
+            <div class="about-photo-item-action-text">
+                Comment 4
+            </div>
+        </div>
+    </div><div class="about-photo-item-container">
+        <div class="about-photo-item-header">
+            <div class="about-photo-item-name">
+                Sweet Dreams!
+            </div>
+            <div class="about-photo-item-place">
+                17 Августа, 2015
+            </div>
+        </div>
+        <div class="about-photo-item">
+            <img src="4.jpg">
+        </div>
+        <div class="about-photo-item-actions">
+            <div class="about-photo-item-like">
+                <img src="unliked.svg">
+            </div>
+            <div class="about-photo-item-action-text">
+                Like 1000
+            </div>
+            <div class="about-photo-item-comment">
+                <img src="comment.svg">
+            </div>
+            <div class="about-photo-item-action-text">
+                Comment 4
+            </div>
+        </div>
+    </div><div class="about-photo-item-container">
+        <div class="about-photo-item-header">
+            <div class="about-photo-item-name">
+                Sweet Dreams!
+            </div>
+            <div class="about-photo-item-place">
+                17 Августа, 2015
+            </div>
+        </div>
+        <div class="about-photo-item">
+            <img src="4.jpg">
+        </div>
+        <div class="about-photo-item-actions">
+            <div class="about-photo-item-like">
+                <img src="unliked.svg">
+            </div>
+            <div class="about-photo-item-action-text">
+                Like 1000
+            </div>
+            <div class="about-photo-item-comment">
+                <img src="comment.svg">
+            </div>
+            <div class="about-photo-item-action-text">
+                Comment 4
+            </div>
+        </div>
+    </div><div class="about-photo-item-container">
+        <div class="about-photo-item-header">
+            <div class="about-photo-item-name">
+                Sweet Dreams!
+            </div>
+            <div class="about-photo-item-place">
+                17 Августа, 2015
+            </div>
+        </div>
+        <div class="about-photo-item">
+            <img src="4.jpg">
+        </div>
+        <div class="about-photo-item-actions">
+            <div class="about-photo-item-like">
+                <img src="unliked.svg">
+            </div>
+            <div class="about-photo-item-action-text">
+                Like 1000
+            </div>
+            <div class="about-photo-item-comment">
+                <img src="comment.svg">
+            </div>
+            <div class="about-photo-item-action-text">
+                Comment 4
+            </div>
+        </div>
+    </div>
     </div>
 </div>
