--- a/src/main/resources/static/css.css
+++ b/src/main/resources/static/css.css
@@ -87,7 +87,7 @@
     width: auto;
 }
 
-.thumb-photo img.portrait {
+.crop-center-photo img.portrait {
     height: auto;
     width: 100%;
 }
@@ -148,10 +148,11 @@ body {
 }
 
 .social-icon {
-    width: 40px;
-    height: 40px;
-    border-radius: 20px;
+    max-width: 25px;
+    height: auto;
+    border-radius: 40px;
     overflow: hidden;
+    margin-left: 20px;
 }
 
 .social-icon img {
