--- a/frontend-part/src/main/resources/static/css.css
+++ b/frontend-part/src/main/resources/static/css.css
@@ -1,9 +1,23 @@
+html {
+    position: relative;
+    min-height: 100%;
+}
+
 .caption {
     position: absolute;
     top: 20%;
     left: 0;
     width: 100%;
     font-size: 28px;
+}
+
+.caption-album {
+    position: relative;
+    z-index: 100;
+    top: 20px;
+    left: 0;
+    width: 100%;
+    font-size: 17px;
 }
 
 .full-width-thumbnail {
@@ -18,10 +32,33 @@
     font-weight: 600;
 }
 
+.small-text {
+    font-size: 0.5em;
+    color: white;
+    font-weight: 400;
+}
+
+.large-bold-text-album {
+    color: white;
+    font-weight: 600;
+    padding-right: 0;
+}
+
+.small-text-album {
+    font-size: 0.6em;
+    color: white;
+    font-weight: 400;
+}
+
 @media (min-width: 576px) {
     .caption {
         font-size: 35px;
-        top: 20%;
+        top: 30%;
+    }
+
+    .caption-album {
+        font-size: 23px;
+        top: 40px;
     }
 
     .full-width-thumbnail {
@@ -32,7 +69,12 @@
 @media (min-width: 768px) {
     .caption {
         font-size: 40px;
-        top: 20%;
+        top: 30%;
+    }
+
+    .caption-album {
+        font-size: 27px;
+        top: 45px;
     }
 
     .full-width-thumbnail {
@@ -46,29 +88,16 @@
         top: 25%;
     }
 
+    .caption-album {
+        font-size: 33px;
+        top: 55px;
+    }
+
     .full-width-thumbnail {
         height: 230px;
     }
 }
 
-/*@media (min-width: 1200px) {*/
-    /*.large-bold-text {*/
-        /*font-size: 55px;*/
-    /*}*/
-    /**/
-    /*.full-width-thumbnail {*/
-        /*height: 250px;*/
-    /*}*/
-/*}*/
-
-.small-text {
-    font-size: 0.4em;
-    color: white;
-    font-weight: 400;
-    margin-left: 200px;
-    margin-right: 200px;
-    /*max-width: 1000px;*/
-}
 
 .thumb-photo {
     /*width: 400px;*/
@@ -117,6 +146,7 @@ body {
     /*background-color: #ececff;*/
     background-color: #edeef0;
     font-family: 'Montserrat', sans-serif;
+    margin-bottom: 120px;
 }
 
 .thumb-info {
@@ -127,17 +157,10 @@ body {
 .thumb-info-name {
     font-size: 20px;
     font-weight: 600;
-}
-
-.thumb-info-meta {
-    padding-top: 20px;
-    font-size: 11px;
-    color: #454545;
-    font-weight: 400;
+    padding-bottom: 20px;
 }
 
 .thumb-info-description {
-    padding-top: 20px;
     font-size: 13px;
     color: #2f2f2f;
     font-weight: 400;
@@ -146,7 +169,7 @@ body {
 
 .footer {
     position: absolute;
-    margin-top: 30px;
+    bottom: 0;
     width: 100%;
     height: 90px;
     background-color: #101010;
@@ -207,14 +230,27 @@ dl, ol, ul {
 }
 
 .post-location {
-    font-weight: 400;
-    font-size: 14px;
-    padding-right: 40px;
+    font-weight: 500;
+    font-size: 11px;
+    padding-top: 20px;
+    padding-right: 20px;
     font-style: italic;
 }
 
+.post-location-pin {
+    height: 11px;
+    width: 11px;
+    display: inline-block;
+}
+
+.post-location-pin img {
+    width: 100%;
+    height: 100%;
+    margin-bottom: 3px;
+}
+
 .post-description {
-    padding: 20px 20px 0;
+    padding: 15px 20px 0;
     font-size: 14px;
 }
 
@@ -245,4 +281,27 @@ dl, ol, ul {
 
 .post-like {
     padding-top: 15px;
+}
+
+.photo-count {
+    position: relative;
+    z-index: 100;
+    top: 210px;
+    width: 100%;
+    height: 40px;
+    color: #edeef0;
+    font-size: 10px;
+    font-weight: 500;
+    padding-right: 10px;
+    background: linear-gradient(to top, rgba(50, 50, 50, 1), rgba(0, 0, 0, 0));
+}
+
+.thumb-info-button {
+    margin-top: 5px;
+    width: 110px;
+    height: 30px;
+    font-size: 11px;
+    font-weight: 600;
+    color: white;
+    background-color: #cb132a;
 }
