--- a/frontend-part/react-app/src/components/album/Album.css
+++ b/frontend-part/react-app/src/components/album/Album.css
@@ -15,26 +15,50 @@
     font-size: 10px;
     font-weight: 500;
     padding-right: 10px;
-    background: rgba(0, 0, 0, 0.3);
+    background: #00000055;
+    cursor: default;
+}
+
+.album-image-overlay {
+    position: absolute;
+    z-index: 100;
+    opacity: 0;
+    width: 100%;
+    height: 210px;
+    transition: .1s ease;
+}
+
+.album-image-overlay:hover {
+    opacity: 1;
+    cursor: pointer;
+    background-color: #00000055;
 }
 
 @media (min-width: 768px) {
-    .photo-cover {
+    .album-photo-cover {
         height: 280px;
     }
 
-    .photo-count {
+    .album-photo-count {
         top: 240px;
+    }
+
+    .album-image-overlay {
+        height: 240px;
     }
 }
 
 @media (min-width: 992px) {
-    .photo-cover {
+    .album-photo-cover {
         height: 250px;
     }
 
-    .photo-count {
+    .album-photo-count {
         top: 210px;
+    }
+
+    .album-image-overlay {
+        height: 210px;
     }
 }
 
@@ -68,4 +92,13 @@
     font-weight: 600;
     color: #FFFFFF;
     background-color: #cb132a;
+    cursor: pointer;
+    transition: 0.5s ease;
+}
+
+.album-info-button:hover {
+    color: #cb132a;
+    background-color: #FFFFFF;
+    border: 1px solid #cb132a;
+
 }
