--- a/frontend-part/react-app/src/components/post/Post.css
+++ b/frontend-part/react-app/src/components/post/Post.css
@@ -3,17 +3,20 @@
     background-color: #FFFFFF;
 }
 
+.post-header {
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
 .post-name {
     font-size: 19px;
     font-weight: 600;
-    padding-top: 20px;
-    padding-left: 30px;
+    padding-left: 45px;
 }
 
 .post-date {
     font-weight: 300;
     font-size: 12px;
-    padding-bottom: 15px;
     padding-left: 45px;
 }
 
@@ -32,6 +35,7 @@
 }
 
 .post-footer {
+    padding-top: 15px;
     padding-bottom: 15px;
 }
 
@@ -56,13 +60,11 @@
 }
 
 .post-description {
-    padding: 15px 20px 0;
+    padding: 10px 20px;
     font-size: 14px;
 }
 
-.post-like {
-    padding-top: 15px;
-}
+.post-like {}
 
 .post-like-heart {
     width: 17px;
