--- a/frontend-part/react-app/src/index.css
+++ b/frontend-part/react-app/src/index.css
@@ -1,5 +1,10 @@
+html {
+  position: relative;
+  min-height: 100%;
+}
+
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+  background-color: #edeef0;
+  font-family: 'Montserrat', sans-serif;
+  margin-bottom: 120px;
 }
