--- a/frontend-part/react-app/src/App.css
+++ b/frontend-part/react-app/src/App.css
@@ -20,6 +20,7 @@
 
 .loading {
     background: url("assets/loading.svg") no-repeat center;
+    background-size: contain;
     width: 50px;
     height: 50px;
 }
