--- a/frontend-part/react-app/src/components/footer/Footer.css
+++ b/frontend-part/react-app/src/components/footer/Footer.css
@@ -1,22 +1,49 @@
 .footer {
-    position: absolute;
-    bottom: 0;
     width: 100%;
-    height: 90px;
+    flex: none;
+    height: 130px;
     background-color: #101010;
     color: #ffffff;
-    font-size: 13px;
+    font-size: 16px;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-top: 30px;
+    padding-bottom: 10px;
+}
+
+.socials {
+    display: flex;
+    justify-content: space-around;
+    width: 150px;
 }
 
 .social-icon {
-    max-width: 25px;
-    height: auto;
-    border-radius: 40px;
+    width: 35px;
+    height: 35px;
+    border-radius: 35px;
     overflow: hidden;
-    margin-left: 20px;
 }
 
 .social-icon img {
     width: 100%;
     height: 100%;
+    vertical-align: unset;
+}
+
+.footer-copyright {
+    margin-top: 20px;
+}
+
+.footer-copyright a {
+    color: #FFFFFF;
+}
+
+.footer-copyright a:hover {
+    color: #FFFFFF;
+}
+
+.footer-source {
+    margin-right: 5px;
+    font-size: 12px;
+    line-height: 24px;
 }
