--- a/frontend-part/react-app/src/index.css
+++ b/frontend-part/react-app/src/index.css
@@ -1,10 +1,9 @@
 html {
-  position: relative;
-  min-height: 100%;
+  height: 100%;
 }
 
 body {
   background-color: #edeef0;
   font-family: 'Montserrat', sans-serif;
-  margin-bottom: 120px;
+  height: 100%;
 }
