--- a/frontend-part/react-app/src/App.css
+++ b/frontend-part/react-app/src/App.css
@@ -4,6 +4,12 @@
     height: 100%;
 }
 
+.img-contain {
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
+}
+
 .main-wrapper {
     display: flex;
     flex-flow: column;
